# catboost_rs

./: .gitignore  CLAUDE.md  Cargo.toml
crates/catboost-rs/: Cargo.toml
crates/catboost-rs-py/: .gitignore  Cargo.toml  FREE_THREADING.md  PACKAGING.md  README.md  build-rocm-wheel.sh  pyproject-rocm.toml  pyproject.toml
crates/catboost-rs-py/src/: classifier.rs  errors.rs  errors_test.rs  estimator.rs  estimator_test.rs  ingest_py.rs  ingest_py_test.rs  lib.rs  params.rs  params_test.rs  pool.rs  ranker.rs  regressor.rs  utils.rs
crates/catboost-rs-py/tests/: conftest.py  test_check_estimator.py  test_errors.py  test_free_threaded.py  test_ingestion.py  test_native_api.py  test_onnx_export.py  test_oracle_parity.py  test_params.py  test_smoke.py  test_utils_eval_metric.py
crates/catboost-rs/src/: builder.rs  error.rs  error_test.rs  lib.rs  metrics.rs  metrics_test.rs  model.rs  model_sum_test.rs  onnx_test.rs
crates/catboost-rs/tests/: builder_oracle_test.rs  coreml_facade_test.rs  fstr_loss_change_facade_test.rs  onnx_facade_test.rs  partial_dependence_facade_test.rs  staged_predict_facade_test.rs
crates/cb-backend/: Cargo.toml
crates/cb-backend/src/: cpu_runtime.rs  cpu_runtime_test.rs  gpu_backend.rs  gpu_backend_test.rs  gpu_runtime.rs  kernels.rs  lib.rs
crates/cb-compute/: Cargo.toml
crates/cb-compute/src/: custom.rs  embedding_calcers.rs  embedding_calcers_test.rs  histogram.rs  histogram_test.rs  hnsw.rs  hnsw_test.rs  lda_linalg.rs  lda_linalg_test.rs  leaf.rs  leaf_test.rs  lib.rs  loss.rs  loss_test.rs  pairwise_scoring.rs  pairwise_scoring_test.rs  ranking_der.rs  ranking_der_test.rs  runtime.rs  runtime_test.rs  score.rs  score_test.rs  text_calcers.rs  text_calcers_test.rs
crates/cb-compute/tests/: custom_objective_test.rs  depth6_reference_test.rs  fused_feature_parity_test.rs  score_functions_test.rs
crates/cb-data/: Cargo.toml
crates/cb-data/src/: borders.rs  borders_test.rs  cat_hash.rs  cat_hash_test.rs  lib.rs  nan_mode.rs  nan_mode_test.rs  pool.rs  pool_test.rs  quantize.rs  quantize_test.rs  quantized_pool.rs  quantized_pool_test.rs  weights.rs  weights_test.rs
crates/cb-data/tests/: borders_oracle_test.rs  cat_hash_oracle_test.rs  quantize_oracle_test.rs  weights_oracle_test.rs
crates/cb-model/: Cargo.toml
crates/cb-model/src/: apply.rs  cbm.rs  cbm_test.rs  ctr_data.rs  ctr_data_test.rs  error.rs  fstr.rs  fstr_test.rs  json.rs  lib.rs  model.rs  model_sum.rs  model_sum_test.rs  partial_dependence.rs  partial_dependence_test.rs  predict.rs  region_apply_test.rs  shap.rs  staged_predict_test.rs
crates/cb-model/tests/: advanced_fstr_oracle_test.rs  apply_oracle_test.rs  cbm_oracle_test.rs  class_params_roundtrip_test.rs  coreml_export_test.rs  ctr_data_roundtrip_test.rs  fstr_ctr_oracle_test.rs  fstr_oracle_test.rs  json_oracle_test.rs  model_sum_oracle_test.rs  multiclass_apply_oracle_test.rs  non_symmetric_grower_roundtrip_oracle_test.rs  non_symmetric_oracle_test.rs  partial_dependence_oracle_test.rs  predict_oracle_test.rs  predict_raw_multi_test.rs  shap_oracle_test.rs  staged_predict_oracle_test.rs  uncertainty_predict_test.rs
crates/cb-oracle/: Cargo.toml
crates/cb-oracle/generator/: README.md  build_instrumented_trainer.sh  cityhash_oracle.cpp  gen_depthwise_simplest_fixture.py  gen_fixtures.py  gen_inputs.py  gen_monotone_fixtures.py  gen_multi_permutation_fold.py  gen_penalty_fixtures.py  gen_ranking_fixtures.py  gen_stochasticrank_fixture.py  gen_text_embedding_fixtures.py  instrument_fold_rng.cpp  instrument_live_trainer_README.md  instrument_ranking_rng_README.md  instrument_text_pipeline.cpp  instrument_text_pipeline_README.md  instrumented_trainer_STATUS.md  ordered_oracle.cpp  requirements.txt  rmse_uncertainty_fixture.py  stochasticrank_centering_test.rs  stochasticrank_oracle.cpp  uncertainty_predict_fixture.py  yetirank_oracle.cpp
crates/cb-oracle/src/: compare.rs  compare_test.rs  error.rs  fixture.rs  fixture_test.rs  lib.rs  model_json.rs  model_json_test.rs
crates/cb-oracle/tests/: bm25_oracle_test.rs  bow_oracle_test.rs  hnsw_neighbor_oracle_test.rs  knn_oracle_test.rs  lda_oracle_test.rs  naive_bayes_oracle_test.rs  per_stage_oracle_test.rs  skeleton_oracle_test.rs  stochasticrank_centering_test.rs  text_embedding_end_to_end_oracle_test.rs  tokenizer_oracle_test.rs
crates/cb-train/: Cargo.toml
crates/cb-train/src/: autolr.rs  autolr_test.rs  boosting.rs  boosting_device_fold_test.rs  boosting_test.rs  bootstrap.rs  bootstrap_test.rs  calc_metrics.rs  calc_metrics_test.rs  candidates.rs  candidates_test.rs  feature_selection.rs  fold.rs  fold_test.rs  leaf_wise_scorer_test.rs  lib.rs  metrics.rs  metrics_test.rs  overfit.rs  overfit_test.rs  pairwise_leaves.rs  pairwise_leaves_test.rs  permutation.rs  permutation_test.rs  projection.rs  projection_test.rs  query_info.rs  query_info_test.rs  ranking_metrics.rs  ranking_metrics_test.rs  region_grow_test.rs  tree.rs  tree_ordered_test.rs  tree_pairwise_test.rs  tree_test.rs  tree_tie_break_test.rs  yetirank.rs  yetirank_test.rs
crates/cb-train/tests/: autolr_e2e_test.rs  averaging_fold_permutation_oracle_test.rs  bench_grow_speed_test.rs  bootstrap_oracle_test.rs  calc_metrics_flat_oracle_test.rs  calc_metrics_ranking_oracle_test.rs  ctr_feature_materialize_test.rs  ctr_split_scoring_test.rs  custom_objective_oracle_test.rs  device_nonsym_fit_test.rs  device_region_fit_test.rs  device_seam_test.rs  eval_metrics_oracle_test.rs  feature_selection_oracle_test.rs  fused_scaling_test.rs  grouped_weight_regression_test.rs  lambdamart_oracle_test.rs  leaf_methods_oracle_test.rs  leaf_weights_oracle_test.rs  learn_set_shuffle_oracle_test.rs  loss_oracle_test.rs  monotone_oracle_test.rs  msle_metric_oracle_test.rs  multi_permutation_e2e_oracle_test.rs  multi_permutation_fold_oracle_test.rs  multiclass_oracle_test.rs  multidim_sampling_regression_test.rs  multilabel_oracle_test.rs  multiquantile_oracle_test.rs  ndim_dim1_identity_test.rs  non_symmetric_grower_oracle_test.rs  one_hot_oracle_test.rs  ordered_boost_e2e_oracle_test.rs  overfit_oracle_test.rs  (+30 more)
(+1381 files in other folders)
