[workspace]
resolver = "2"
members = ["crates/*"]

# Centralized clippy restriction-lint policy (D-13). Each library crate opts in
# with `[lints] workspace = true`. These four restriction lints are denied
# workspace-wide; test code is exempted in-code via
# `#![cfg_attr(test, allow(...))]` (manifest-level per-crate overrides are
# forbidden when `lints.workspace = true`, so the exemption must live in code).
[workspace.lints.clippy]
unwrap_used      = "deny"
expect_used      = "deny"
panic            = "deny"
indexing_slicing = "deny"

# Pinned latest stable versions (confirmed via `cargo search`, 2026-06-13).
# `approx` is pinned to the latest STABLE 0.5 line (0.6.0-rc2 is a pre-release
# and not appropriate to pin); it is a test-only dev-dependency.
[workspace.dependencies]
thiserror   = "2.0.18"
ndarray     = "0.17.2"
ndarray-npy = "0.10.0"
serde       = { version = "1.0.228", features = ["derive"] }
serde_json  = "1.0.150"
approx      = "0.5"
anyhow      = "1.0.102"
# Phase-2 ingestion stack (RESEARCH Standard Stack; latest stable, 2026-06-13).
arrow       = "59.0.0"
polars      = { version = "0.54.4", default-features = false, features = ["dtype-full"] }
# Phase-3 CubeCL CPU compute seam (D-01/D-03). Wired into `cb-backend` ONLY —
# never into `cb-compute` (D-03 keeps the generic boundary cubecl-free). Versions
# confirmed via `cargo search` (cubecl 0.10.0; bytemuck 1.x floor) and the CubeCL
# manual (`bytemuck` for host<->device transfer).
# Phase-7.1 (D-7.1-02 / RESEARCH Pitfall 1): the per-backend cubecl facade
# feature (cpu/wgpu/cuda/hip) is selected in `cb-backend`'s feature table, NOT
# pinned here — an unconditional `features=["cpu"]` would force `cpu` onto every
# consumer via feature unification and defeat a cpu-free `--features rocm` build.
cubecl      = { version = "0.10.0" }
bytemuck    = { version = "1", features = ["extern_crate_std"] }
