[package]
name = "catboost-rs-py"
version = "0.1.0"
edition = "2021"
description = "PyO3 binding crate exposing the catboost-rs facade as the `catboost_rs` Python module (Phase 8)"

[lints]
workspace = true

[lib]
# cdylib for the Python extension wheel; rlib so the Rust `*_test.rs` unit tests
# can link the crate. (PATTERNS / RESEARCH Standard Stack.)
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3-org stack pinned & legitimacy-audited (RESEARCH Package Legitimacy Audit).
# `extension-module` is NOT enabled unconditionally here: it suppresses linking
# libpython, which breaks `cargo test` (no Python symbols at test link time). The
# wheel build turns it on via pyproject `[tool.maturin] features =
# ["pyo3/extension-module"]`; `cargo test` links libpython normally.
# `auto-initialize` lets the Rust `*_test.rs` unit tests boot the interpreter for
# `Python::attach`. It is inert under the wheel build (maturin enables
# `extension-module`, which takes precedence and links against the host
# interpreter rather than initializing one).
pyo3 = { version = "0.29.0", features = ["abi3-py312", "auto-initialize"] }
numpy = "0.29.0"
pyo3-arrow = "0.19.0"
# default-features = false: backend selection flows ONLY through this crate's
# [features] passthrough, so `--no-default-features --features rocm` is cpu-free.
catboost-rs = { path = "../catboost-rs", default-features = false }
cb-data = { path = "../cb-data" }
thiserror.workspace = true

[features]
# Compile-time backend selection only — forward to the facade passthrough, which
# forwards to cb-backend's `cubecl/<facade>` arms. NEVER pin `cpu` unconditionally
# (the backend-feature-unification landmine): an unconditional cpu dep would force
# cpu onto a `--no-default-features --features rocm` build via feature unification.
default = ["cpu"]
cpu = ["catboost-rs/cpu"]
rocm = ["catboost-rs/rocm"]
