[package]
name = "catboost-rs-py"
version = "0.1.0"
edition = "2021"
description = "PyO3 binding crate exposing the catboost-rs facade as the `catboost_rs` Python module (Phase 8)"

[lints]
workspace = true

[lib]
# cdylib for the Python extension wheel; rlib so the Rust `*_test.rs` unit tests
# can link the crate. (PATTERNS / RESEARCH Standard Stack.)
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3-org stack pinned & legitimacy-audited (RESEARCH Package Legitimacy Audit).
# `extension-module` is NOT enabled unconditionally here: it suppresses linking
# libpython, which breaks `cargo test` (no Python symbols at test link time). The
# wheel build turns it on via pyproject `[tool.maturin] features =
# ["pyo3/extension-module"]`; `cargo test` links libpython normally.
# `auto-initialize` lets the Rust `*_test.rs` unit tests boot the interpreter for
# `Python::attach`. It is inert under the wheel build (maturin enables
# `extension-module`, which takes precedence and links against the host
# interpreter rather than initializing one).
pyo3 = { version = "0.29.0", features = ["abi3-py312", "auto-initialize"] }
numpy = "0.29.0"
pyo3-arrow = "0.19.0"
# default-features = false: backend selection flows ONLY through this crate's
# [features] passthrough, so `--no-default-features --features rocm` is cpu-free.
catboost-rs = { path = "../catboost-rs", default-features = false }
cb-data = { path = "../cb-data" }
# The `arrow` umbrella crate (workspace-pinned 59.0.0, the SAME version pyo3-arrow
# 0.19 links) so the Arrow/Polars ingest path can validate dtype/null_count and
# copy Float32 columns out of the RecordBatch `pyo3_arrow::PyTable` yields.
arrow.workspace = true
thiserror.workspace = true

[dev-dependencies]
# Used only by `errors_test.rs` to construct the `CbError` / `ModelError` payloads
# that drive the `Train` / `Model` facade-error variants through `to_pyerr`
# (these internal error crates are NOT re-exported by the facade).
cb-core = { path = "../cb-core" }
# default-features = false: prevents this dev-dep re-enabling cb-backend's default
# `cpu` (via cb-model -> cb-train -> cb-backend) and unifying cpu+rocm under a
# workspace `cargo test --features rocm` (WR-03 feature-unification landmine).
cb-model = { path = "../cb-model", default-features = false }

[features]
# Compile-time backend selection only — forward to the facade passthrough, which
# forwards to cb-backend's `cubecl/<facade>` arms. NEVER pin `cpu` unconditionally
# (the backend-feature-unification landmine): an unconditional cpu dep would force
# cpu onto a `--no-default-features --features rocm` build via feature unification.
default = ["cpu"]
cpu = ["catboost-rs/cpu"]
rocm = ["catboost-rs/rocm"]
# 08-08: wgpu/cuda passthrough alongside cpu/rocm so the generic GpuBackend is
# selectable for all three GPU backends through the facade (cpu-free under each).
wgpu = ["catboost-rs/wgpu"]
cuda = ["catboost-rs/cuda"]
