[package]
name = "catboost-rs-py"
version = "0.1.0"
edition = "2021"
description = "PyO3 binding crate exposing the catboost-rs facade as the `catboost_rs` Python module (Phase 8)"

[lints]
workspace = true

[lib]
# cdylib for the Python extension wheel; rlib so the Rust `*_test.rs` unit tests
# can link the crate. (PATTERNS / RESEARCH Standard Stack.)
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3-org stack pinned & legitimacy-audited (RESEARCH Package Legitimacy Audit).
# `extension-module` is NOT enabled unconditionally here: it suppresses linking
# libpython, which breaks `cargo test` (no Python symbols at test link time). The
# wheel build turns it on via pyproject `[tool.maturin] features =
# ["pyo3/extension-module"]`; `cargo test` links libpython normally.
# `auto-initialize` lets the Rust `*_test.rs` unit tests boot the interpreter for
# `Python::attach`. It is inert under the wheel build (maturin enables
# `extension-module`, which takes precedence and links against the host
# interpreter rather than initializing one).
pyo3 = { version = "0.29.0", features = ["abi3-py312", "auto-initialize"] }
numpy = "0.29.0"
pyo3-arrow = "0.19.0"
# default-features = false: backend selection flows ONLY through this crate's
# [features] passthrough, so `--no-default-features --features rocm` is cpu-free.
catboost-rs = { path = "../catboost-rs", default-features = false }
cb-data = { path = "../cb-data" }
# The `arrow` umbrella crate (workspace-pinned 59.0.0, the SAME version pyo3-arrow
# 0.19 links) so the Arrow/Polars ingest path can validate dtype/null_count and
# copy Float32 columns out of the RecordBatch `pyo3_arrow::PyTable` yields.
arrow.workspace = true
thiserror.workspace = true
# PRODUCTION dependency as of EXPORT-01f (Phase 17 T6-0, plan-checker pass 3
# CRITICAL fix): `errors.rs`'s `to_pyerr` — a production function, not test-only
# — names `cb_model::OnnxExportError` directly in its `Export` match arm. Cargo's
# dev-dependency extern prelude is populated for `cargo test` but NOT for the
# real `cargo build -p catboost-rs-py` / `maturin develop`/`build` production
# build, so leaving this a dev-dependency would let `cargo test` pass while the
# actual wheel build failed to compile (the exact defect class the plan-checker
# caught). default-features = false is PRESERVED here (re-verified for the
# regular-dependency case, not just the former dev-dependency case): it still
# prevents this dependency from re-enabling `cb-backend`'s default `cpu` feature
# via `cb-model -> cb-train -> cb-backend` and unifying cpu+rocm under a
# workspace `--features rocm` build (WR-03 feature-unification landmine) —
# backend selection continues to flow ONLY through this crate's own [features]
# passthrough below, which already forwards `catboost-rs/<backend>` (and thus
# `cb-model/<backend>`) explicitly; a second, unconditional `cb-model` edge with
# default features would defeat that passthrough exactly as it would for any
# other backend-bearing dependency in this crate.
cb-model = { path = "../cb-model", default-features = false }

[dev-dependencies]
# Used only by `errors_test.rs` to construct the `CbError` / `ModelError` payloads
# that drive the `Train` / `Model` facade-error variants through `to_pyerr`
# (these internal error crates are NOT re-exported by the facade).
cb-core = { path = "../cb-core" }
# Test-only (D-14/D-15 edge, AT-01f-5): `prost::EncodeError` has no public
# constructor, so `errors_test.rs`'s `Export(Encode(_))` mapping test forces a
# REAL encode failure (a too-small `BufMut` target) rather than fabricate an
# unreachable variant. Same version cb-model already pins.
prost = "0.14.4"

[features]
# Compile-time backend selection only — forward to the facade passthrough, which
# forwards to cb-backend's `cubecl/<facade>` arms. NEVER pin `cpu` unconditionally
# (the backend-feature-unification landmine): an unconditional cpu dep would force
# cpu onto a `--no-default-features --features rocm` build via feature unification.
default = ["cpu"]
cpu = ["catboost-rs/cpu"]
rocm = ["catboost-rs/rocm"]
# 08-08: wgpu/cuda passthrough alongside cpu/rocm so the generic GpuBackend is
# selectable for all three GPU backends through the facade (cpu-free under each).
wgpu = ["catboost-rs/wgpu"]
cuda = ["catboost-rs/cuda"]
