[package]
name = "cb-backend"
version = "0.1.0"
edition = "2021"
description = "Sole feature-gated runtime-alias owner for catboost-rs (CubeCL runtime wired in Phase 7)"

[lints]
workspace = true

[dependencies]
# D-02: cb-backend is the SINGLE feature-gated runtime-alias owner. As of Phase 3
# (D-01) the `cpu` arm stands up the real CubeCL CPU runtime here — `cubecl` and
# `bytemuck` live in THIS crate ONLY (D-03 keeps `cb-compute` cubecl-free). The
# `wgpu`/`cuda`/`rocm` arms remain inert placeholders until Phase 7.
# NO per-backend crates. NOTE: `anyhow` is intentionally absent (D-14 structural
# ban). Do not add it.
cubecl.workspace = true
bytemuck.workspace = true
# cb-backend implements cb-compute's abstract Runtime trait by launching the
# `#[cube]` kernels (D-03 keeps cubecl OUT of cb-compute, not the reverse).
cb-compute = { path = "../cb-compute" }
cb-core = { path = "../cb-core" }

[features]
# Compile-time backend selection only — NO runtime dispatch (D-02). All arms are
# inert placeholders in Phase 1.
default = ["cpu"]
cpu = []
wgpu = []
cuda = []
rocm = []
