[package]
name = "cb-backend"
version = "0.1.0"
edition = "2021"
description = "Sole feature-gated runtime-alias owner for catboost-rs (CubeCL runtime wired in Phase 7)"

[lints]
workspace = true

[dependencies]
# D-02: cb-backend is the SINGLE feature-gated runtime-alias owner. As of Phase 3
# (D-01) the `cpu` arm stands up the real CubeCL CPU runtime here — `cubecl` and
# `bytemuck` live in THIS crate ONLY (D-03 keeps `cb-compute` cubecl-free). As of
# Phase 7.1 (D-7.1-01) the `wgpu`/`cuda`/`rocm` arms resolve to real CubeCL runtimes
# (`WgpuRuntime`/`CudaRuntime`/`HipRuntime`) — see `lib.rs` `SelectedRuntime` — and
# are no longer inert placeholders.
# NO per-backend crates. NOTE: `anyhow` is intentionally absent (D-14 structural
# ban). Do not add it.
cubecl.workspace = true
bytemuck.workspace = true
# cb-backend implements cb-compute's abstract Runtime trait by launching the
# `#[cube]` kernels (D-03 keeps cubecl OUT of cb-compute, not the reverse).
cb-compute = { path = "../cb-compute" }
cb-core = { path = "../cb-core" }

[features]
# Compile-time backend selection only — NO runtime dispatch (D-02). Each backend
# feature forwards to its cubecl facade feature (D-7.1-02 / RESEARCH Pitfall 1):
# selection lives HERE, not on the workspace cubecl pin, so a
# `--no-default-features --features rocm` build is cpu-free (pulls only cubecl/hip).
# NOTE: rocm -> `cubecl/hip` (the cubecl facade names the AMD/ROCm runtime `hip`).
# Do NOT add `cubecl-hip-sys/hip_xxx` here — the sys build.rs auto-detects the HIP
# patch from `hipconfig` and panics on manual feature pinning (RESEARCH Pitfall 2).
default = ["cpu"]
cpu = ["cubecl/cpu"]
wgpu = ["cubecl/wgpu"]
cuda = ["cubecl/cuda"]
rocm = ["cubecl/hip"]

[dev-dependencies]
# D-7.5-04 read-only CPU cross-oracle: the Phase-7.5 score/split self-oracle
# (`kernels/score_split.rs`) compares the device argmin against `cb-train`'s
# `select_best_candidate` (strict first-wins / lowest-index tie-break) over an
# ascending (feature, bin) `Candidate` vector. `cb-train` is a TEST-ONLY (dev)
# dependency here — it is NEVER linked into the normal `cb-backend` build graph, so
# the SC-4 boundary (cubecl stays in `cb-backend`; `cb-train` stays cubecl-free) is
# preserved. The build graph has a normal `cb-train -> cb-backend` edge, so this
# dev edge forms a cargo-permitted dev-dependency cycle (the exact pattern
# `cb-train`'s own `cb-model` dev-dep uses): dev-dependency cycles are allowed
# because they never affect the production link.
cb-train = { path = "../cb-train" }
