[package]
name = "cb-compute"
version = "0.1.0"
edition = "2021"
description = "Pure-generic compute boundary (R: Runtime / F: Float seam) for catboost-rs (realized in Phase 3)"

[lints]
workspace = true

[dependencies]
# D-03: cb-compute is a PURE-GENERIC crate. It MUST NOT depend on `cubecl` or any
# backend runtime — the concrete runtime is bound only in `cb-backend` (D-02).
# NOTE: `anyhow` is intentionally absent (D-14 structural ban). Do not add it.
cb-core = { path = "../cb-core" }
cb-data = { path = "../cb-data" }

[dev-dependencies]
# Test-only JSON reader for the depth-6 cross-check fixture (Plan 11-01 Task 2).
# NOT a runtime dependency — cb-compute stays cubecl-free / anyhow-free (D-03/D-14);
# dev-deps do not leak into the pure-generic production boundary.
serde_json = { workspace = true }
