[package]
name = "cb-data"
version = "0.1.0"
edition = "2021"
description = "Pool, dataset, and quantization layer for catboost-rs (realized in Phase 2)"

[lints]
workspace = true

[dependencies]
# NOTE: `anyhow` is intentionally absent (D-14 structural ban). Do not add it.
cb-core = { path = "../cb-core" }
thiserror.workspace = true
arrow.workspace = true
polars.workspace = true

[dev-dependencies]
# Test/dev edge only (D-14/D-15): the oracle harness + npy readers for the
# per-feature border parity integration test.
cb-oracle = { path = "../cb-oracle" }
ndarray.workspace = true
ndarray-npy.workspace = true
