[package]
name = "cb-model"
version = "0.1.0"
edition = "2021"
description = "Model serialization and SHAP for catboost-rs (realized in Phase 4)"

[lints]
workspace = true

[dependencies]
# NOTE: `anyhow` is intentionally absent (D-14 structural ban). Do not add it.
cb-core = { path = "../cb-core" }
cb-train = { path = "../cb-train" }
# Categorical hashing single source (calc_cat_feature_hash) for CTR projection
# at inference — NEVER a model's stored ctr_data hash_map (D Carried-Forward).
cb-data = { path = "../cb-data" }
# flatc-generated FlatBuffers bindings runtime (D-01). 25.12.19 reads schemas
# authored for the vendored flatc 24.3.25 (wire format is version-stable;
# RESEARCH A1). Vetted OK in the Package Legitimacy Audit.
flatbuffers = "25.12.19"
# Typed (de)serialization error enum (no anyhow, D-14) + model.json export/import
# on the upstream schema (workspace-pinned, RESEARCH Standard Stack).
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
# Test/dev edge only (D-14/D-15): the oracle harness + npy readers for the
# apply / prediction-type parity integration tests.
cb-oracle = { path = "../cb-oracle" }
ndarray.workspace = true
ndarray-npy.workspace = true
