[package]
name = "cb-model"
version = "0.1.0"
edition = "2021"
description = "Model serialization and SHAP for catboost-rs (realized in Phase 4)"

[lints]
workspace = true

[features]
# Backend-selection passthrough (Phase 8): forward to `cb-train`, which forwards
# to `cb-backend`. `cb-train` is pulled with `default-features = false` below so a
# `--no-default-features --features rocm` build does NOT unify cpu in via cb-model
# (feature-unification landmine).
default = ["cpu"]
cpu = ["cb-train/cpu"]
rocm = ["cb-train/rocm"]
wgpu = ["cb-train/wgpu"]
cuda = ["cb-train/cuda"]

[dependencies]
# NOTE: `anyhow` is intentionally absent (D-14 structural ban). Do not add it.
cb-core = { path = "../cb-core" }
# default-features = false: backend selection is forwarded through the [features]
# block above, never pinned to cpu via cb-train's own default (Phase 8).
cb-train = { path = "../cb-train", default-features = false }
# Categorical hashing single source (calc_cat_feature_hash) for CTR projection
# at inference — NEVER a model's stored ctr_data hash_map (D Carried-Forward).
cb-data = { path = "../cb-data" }
# flatc-generated FlatBuffers bindings runtime (D-01). 25.12.19 reads schemas
# authored for the vendored flatc 24.3.25 (wire format is version-stable;
# RESEARCH A1). Vetted OK in the Package Legitimacy Audit.
flatbuffers = "25.12.19"
# Typed (de)serialization error enum (no anyhow, D-14) + model.json export/import
# on the upstream schema (workspace-pinned, RESEARCH Standard Stack).
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
# ONNX export (EXPORT-01 / Phase 17 T0). Encodes the hand-built `onnx::ModelProto`
# to protobuf wire bytes via `prost::Message::encode`. The ONNX message TYPES
# themselves are a COMMITTED, generated-once `src/generated/onnx_generated.rs`
# (mirrors the flatbuffers precedent above — `protox`/`prost-build` run ONCE,
# offline, out of the `cargo build` graph, never as a build dependency here).
# Pinned to the latest stable release resolved at scaffold time (2026-07-17);
# maintained by the tokio-rs org, widely adopted (gRPC/protobuf de facto Rust
# standard) — passes the project's informal Package Legitimacy Audit bar
# (research.md "Dependency Analysis").
prost = "0.14.4"

[dev-dependencies]
# Test/dev edge only (D-14/D-15): the oracle harness + npy readers for the
# apply / prediction-type parity integration tests.
cb-oracle = { path = "../cb-oracle" }
# Test-only edges (D-14/D-15): the grower→save→load round-trip oracle
# (06.6-09) trains via cb-train, so it needs the CpuBackend runtime…
# default-features = false: a dev-dep that re-enabled cb-backend's default `cpu`
# feature would, under a workspace `cargo test --features rocm`, unify BOTH cpu and
# rocm into the build graph and silently force SelectedRuntime back to CpuRuntime
# (WR-03 / the feature-unification landmine). The backend is selected through this
# crate's own [features] passthrough instead.
cb-backend = { path = "../cb-backend", default-features = false }
# …and the Loss / LeafMethod / EScoreFunction enums for the BoostParams literal.
# cb-train is already a NORMAL dependency above; these are dev-only.
cb-compute = { path = "../cb-compute" }
ndarray.workspace = true
ndarray-npy.workspace = true
