[package]
name = "cb-train"
version = "0.1.0"
edition = "2021"
description = "Gradient-boosting training loop for catboost-rs (realized in Phase 3)"

[lints]
workspace = true

[features]
# Backend-selection passthrough (Phase 8): forward each backend feature to
# `cb-backend`'s `cubecl/<facade>` arms. `cb-backend` is pulled with
# `default-features = false` below so a `--no-default-features --features rocm`
# build does NOT unify cpu in via cb-train (feature-unification landmine).
default = ["cpu"]
cpu = ["cb-backend/cpu"]
rocm = ["cb-backend/rocm"]
wgpu = ["cb-backend/wgpu"]
cuda = ["cb-backend/cuda"]

[dependencies]
# NOTE: `anyhow` is intentionally absent (D-14 structural ban). Do not add it.
cb-core = { path = "../cb-core" }
cb-data = { path = "../cb-data" }
cb-compute = { path = "../cb-compute" }
# default-features = false: backend selection is forwarded through the [features]
# block above, never pinned to cpu via cb-backend's own default (Phase 8).
cb-backend = { path = "../cb-backend", default-features = false }

[dev-dependencies]
# Test/dev edge only (D-14/D-15): the oracle harness + npy readers for the
# first-slice train->predict parity integration test.
cb-oracle = { path = "../cb-oracle" }
# Test-only (ORD-02 e2e, Plan 05-10): the production apply path
# (cb_model::predict_raw) the ordered train->predict oracle validates through.
# A DEV-dependency ONLY — the normal cb-train build graph never links cb-model
# (cb-model depends on cb-train in the build graph; dev-deps are exempt from the
# cycle and compiled solely for the integration test, no runtime cycle).
cb-model = { path = "../cb-model" }
approx.workspace = true
ndarray.workspace = true
ndarray-npy.workspace = true
# Reads the overfit fixtures' config.json (tree_count_ / best_iteration_
# assertion targets) in the TRAIN-06 oracle test.
serde_json.workspace = true
